terraform/network.tf
resource "aws_vpc" "vpc-main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  tags = {
    Name = "vpc-main"
  }
}
